nutype_test_suite/tests/ui/number/validate/unknown.stderr
error: Unknown validation rule `meaningful`
 --> tests/ui/number/validate/unknown.rs:3:19
  |
3 | #[nutype(validate(meaningful))]
  |                   ^^^^^^^^^^
